bug 163998: URL-unescape the image URL for rendering in the title bar (r=nhotta,jst, sr=darin, a=asa)